<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEmpleadoFragment">

    <!-- TODO: Update blank fragment layout -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_avatar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_margin="64dp"
        android:src="@android:drawable/ic_menu_camera"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_imagen_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/edit_avatar"
        app:layout_constraintEnd_toEndOf="@+id/edit_avatar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_id"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:editable="true"
        android:text="@string/str_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_nombre"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:editable="true"
        android:text="@string/str_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_puesto"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:editable="true"
        android:text="@string/str_puesto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_departamento"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:editable="true"
        android:text="@string/str_departamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <Button
        android:id="@+id/edit_cancelar_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:background="@android:color/transparent"
        android:text="@string/str_cancelar"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_editar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/boton_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"></Button>

    <Button
        android:id="@+id/boton_eliminar"
        android:layout_width="299dp"
        android:layout_height="50dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/str_eliminiar"
        android:textColor="@android:color/holo_red_dark"
        android:backgroundTint="@color/white"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>